--- a/style.css
+++ b/style.css
@@ -236,6 +236,7 @@
     display: flex;
     overflow: hidden;
     margin-bottom: var(--margin-medium);
+    max-height: 50px;
   }
 
   .blog__title {
@@ -459,7 +460,7 @@
 
     .tech__skills {
       margin-left: var(--margin-medium);
-      height: 50%;
+      height: 100%;
     }
 
     .projects {
